--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     var identifier;
 
     async function dogBinarization() {
+        document.getElementById("spinner").style.visibility = 'visible';
         var data = JSON.stringify({
             "parameters": {
                 "threshold": 0.1,
@@ -40,10 +41,13 @@
             var img = document.createElement("img");
             img.src = result.output[0].file.url;
             document.getElementById("dog").appendChild(img);
+            document.getElementById("spinner").style.visibility = 'hidden';
+
         })
     }
 
     async function otsuBinarization() {
+        document.getElementById("spinner").style.visibility = 'visible';
         var data = JSON.stringify({
             "parameters": {},
             "data": [
@@ -64,6 +68,7 @@
             var img = document.createElement("img");
             img.src = result.output[0].file.url;
             document.getElementById("otsu").appendChild(img);
+            document.getElementById("spinner").style.visibility = 'hidden';
         })
     }
 
@@ -111,7 +116,7 @@
             currentFile = file;
             uploadImage();
         }
-        reader.onload = function(e) {
+        reader.onload = function (e) {
             var img = document.createElement('img');
             img.src = e.target.result;
             document.getElementById('orig_image').appendChild(img);
@@ -192,6 +197,11 @@
                         <button class="btn btn-primary btn-block" onclick="ocropusBinarization()" disabled=true id='ocropusBtn'>OCRopus Binarization</button>
                     </div>
                 </div>
+                <div class="col-md-auto">
+                    <div class="control-group button-wrapper">
+                        <button class="btn btn-primary btn-block" onclick="test()">TEST</button>
+                    </div>
+                </div>
             </div>
 
         </div>
@@ -199,6 +209,9 @@
 
     <div class="container">
         <!-- Example row of columns -->
+        <div class="row" style="visibility: hidden">
+            <div class="loader" id="spinner"></div>
+        </div>
         <div class="row">
             <div class="col-md-auto" id="otsu">
                 <h2>Otsu</h2>
