added sliders for DoG Binarization

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
         document.getElementById("spinner").style.visibility = 'visible';
         var data = JSON.stringify({
             "parameters": {
-                "threshold": 0.1,
-                "gauss1": 15,
-                "gauss2": 1.5
+                "threshold": document.getElementById("thresh_slider").value,
+                "gauss1": document.getElementById("gauss1_slider").value,
+                "gauss2": document.getElementById("gauss2_slider").value
             },
             "data": [
                 {
@@ -70,6 +70,14 @@
             document.getElementById("otsu").appendChild(img);
             document.getElementById("spinner").style.visibility = 'hidden';
         })
+    }
+
+    async function sauvolaBinarization() {
+        alert('Implement your code here!');
+    }
+
+    async function ocropusBinarization() {
+        alert('Implement your code here');
     }
 
     function getResult(url) {
@@ -153,6 +161,16 @@
         })
     }
 
+    function updateThresh() {
+        document.getElementById("threshCurrentValue").innerHTML = "Threshold: " + document.getElementById("thresh_slider").value;
+    }
+    function updateGauss1() {
+        document.getElementById("gauss1CurrentValue").innerHTML = "Gauss1: " + document.getElementById("gauss1_slider").value;
+    }
+    function updateGauss2() {
+        document.getElementById("gauss2CurrentValue").innerHTML = "Gauss2: " + document.getElementById("gauss2_slider").value;
+    }
+
 </script>
 
 <body>
@@ -190,6 +208,13 @@
                 <div class="col-md-auto">
                     <div class="control-group button-wrapper">
                         <button class="btn btn-primary btn-block" onclick="dogBinarization()" disabled=true id='dogBtn'>DoG Binarization</button>
+                        <div id='threshCurrentValue'>Threshold: 0.1</div>
+                        <input type="range" id='thresh_slider' onchange="updateThresh()" min="0" max="1" step="0.1" value="0.1">
+                        <div id='gauss1CurrentValue'>Gauss1: 15</div>
+                        <input type="range" id='gauss1_slider' onchange="updateGauss1()" min="1" max="25" step="1" value="15">
+                        <div id='gauss2CurrentValue'>Gauss2: 1.5</div>
+                        <input type="range" id='gauss2_slider' onchange="updateGauss2()" min="0.1" max="2.5" step="0.1" value="1.5">
+
                     </div>
                 </div>
                 <div class="col-md-auto">
@@ -201,7 +226,6 @@
 
         </div>
     </div>
-
     <div class="container">
         <!-- Example row of columns -->
         <div class="row" style="visibility: hidden">
