added OCR example, small fixes

--- a/src/index_solution.html
+++ b/src/index_solution.html
@@ -242,8 +242,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1>Binarization Experimentation</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron
-                and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+            <p>This is an example for making Binarization. Keep having fun at ManuSciences!</p>
             <p>
                 <h3>Upload</h3>
                 <label class="btn btn-primary" for="my-file-selector">
