--- a/src/ocr.html
+++ b/src/ocr.html
@@ -17,34 +17,123 @@
     var identifier;
     var collection;
 
-    function recognize() {
-        document.getElementById("spinner").style.visibility = 'visible';
-        var data = JSON.stringify({
-            "data":[
-                {
-                    "dataFolder":collection,
-                    "recognitionModel":"ocr_models/input0.gz"
-                }
-            ]
-        });
-
-        fetch("http://divaservices.unifr.ch/api/v2/ocr/ocropusrecognize/1", {
-            method: "POST",
-            body: data,
-            headers: new Headers({ 'content-type': 'application/json' })
-        }).then(function (res) {
-            return res.json();
-        }).then(async function (data) {
-            var result = await getResult(data.results[0].resultLink);
-            fetch(result.output[0].file.url, {
-                method: "GET"
-            }).then(async function (res){
-                document.getElementById("result").innerHTML = await res.text();
-                document.getElementById("spinner").style.visibility = 'hidden';
-            });
-            
-        })
+    async function recognize() {
+        await binarize();
+        await segment();
+        await recText();
     }
+
+    function recText() {
+        return new Promise(resolve => {
+            var data = JSON.stringify({
+                "parameters": {},
+                "data": [
+                    {
+                        "dataFolder": collection,
+                        "recognitionModel": "ocr_models/english.gz"
+                    }
+                ]
+            });
+            fetch("http://divaservices.unifr.ch/api/v2/ocr/ocropusrecognize/1", {
+                method: "POST",
+                body: data,
+                headers: new Headers({ 'content-type': 'application/json' })
+            }).then(function (res) {
+                return res.json();
+            }).then(async function (data) {
+                var result = await getResult(data.results[0].resultLink);
+                fetch(result.output[0].file.url, {
+                    method: "GET"
+                }).then(async function (res) {
+                    document.getElementById("result").innerHTML = await res.text();
+                    document.getElementById("spinner").style.visibility = 'hidden';
+                    resolve();
+                });
+
+            })
+
+        });
+    }
+
+    function segment() {
+        return new Promise(resolve => {
+            var data = JSON.stringify({
+                "parameters": {},
+                "data": [
+                    {
+                        "inputImage": identifier
+                    }
+                ]
+            });
+
+            fetch("http://divaservices.unifr.ch/api/v2/segmentation/ocropuspagesegmentation/1", {
+                method: "POST",
+                body: data,
+                headers: new Headers({ 'content-type': 'application/json' })
+            }).then(function (res) {
+                return res.json();
+            }).then(async function (data) {
+                var result = await getResult(data.results[0].resultLink);
+                first = true;
+                for (var index = 0; index < result.output.length; index++) {
+                    var element = result.output[index];
+                    if (Object.keys(element)[0] === "file") {
+                        if (element.file.name.includes(".bin.png")) {
+                            if (first) {
+                                first = false;
+                                await uploadImageUrl(element)
+                            } else {
+                                await addImageUrl(element);
+                            }
+                        }
+                    }
+                }
+            });
+        });
+    }
+
+    function binarize() {
+        return new Promise(resolve => {
+            var data = JSON.stringify({
+                "parameters": {},
+                "data": [
+                    {
+                        "inputImage": identifier
+                    }
+                ]
+            });
+            fetch("http://divaservices.unifr.ch/api/v2/binarization/ocropusbinarization/1", {
+                method: "POST",
+                body: data,
+                headers: new Headers({ 'content-type': 'application/json' })
+            }).then(function (res) {
+                return res.json();
+            }).then(async function (data) {
+                var result = await getResult(data.results[0].resultLink);
+                var data = JSON.stringify({
+                    "files": [
+                        {
+                            "type": "url",
+                            "value": result.output[0].file.url,
+                            "name": result.output[0].file.name.split(".")[0],
+                            "extension": "bin.png"
+                        }
+                    ]
+                });
+                identifier = collection + "/" + result.output[0].file.name.split(".")[0] + ".bin.png"
+                fetch("http://divaservices.unifr.ch/api/v2/collections/" + collection, {
+                    method: "PUT",
+                    body: data,
+                    headers: new Headers({ 'content-type': 'application/json' })
+                }).then(function (res) {
+                    return res.json();
+                }).then(async function (data) {
+                    resolve();
+                });
+            });
+        });
+    }
+
     /**
      * 
      * Fetch the result from a given url
@@ -65,8 +154,8 @@
                         resolve(getResult(url));
                     }, 1000);
                 }
-            })
-        })
+            });
+        });
     }
 
     /**
@@ -112,6 +201,58 @@
         reader.readAsDataURL(file);
     }
 
+    function uploadImageUrl(element) {
+        var tmpData = JSON.stringify({
+            "files": [
+                {
+                    "type": "url",
+                    "value": element.file.url,
+                    "name": element.file.name.split(".")[0],
+                    "extension": "bin.png"
+                }
+            ]
+        });
+        return new Promise(resolve => {
+            fetch("http://divaservices.unifr.ch/api/v2/collections", {
+                method: "POST",
+                body: tmpData,
+                headers: new Headers({ 'content-type': 'application/json' })
+            }).then(function (res) {
+                return res.json();
+            }).then(async function (data) {
+                collection = data.collection;
+                console.log("new collection: " + collection);
+                resolve();
+            });
+        });
+    }
+
+    function addImageUrl(element) {
+        var tmpData = JSON.stringify({
+            "files": [
+                {
+                    "type": "url",
+                    "value": element.file.url,
+                    "name": element.file.name.split(".")[0],
+                    "extension": "bin.png"
+                }
+            ]
+        });
+        console.log(collection);
+        return new Promise(resolve => {
+            fetch("http://divaservices.unifr.ch/api/v2/collections/" + collection, {
+                method: "PUT",
+                body: tmpData,
+                headers: new Headers({ 'content-type': 'application/json' })
+            }).then(function (res) {
+                console.log(res);
+                return res.json();
+            }).then(async function (data) {
+                resolve();
+            });
+        });
+    }
+
     /**
      * Uploads the current image to DIVAServices
      * */
@@ -122,7 +263,7 @@
                     "type": "base64",
                     "value": currentImage,
                     "name": currentFile.name.split('.')[0],
-                    "extension": currentFile.name.split('.')[1] + '.' + currentFile.name.split('.')[2]
+                    "extension": currentFile.name.split('.')[1]
                 }
             ]
         });
@@ -149,15 +290,15 @@
                 <h3>Upload</h3>
                 <div>Make sure that the file ending of the image is .bin.png otherwise the application will not work!</div>
                 <label class="btn btn-primary" for="my-file-selector">
-                            <input id="my-file-selector" type="file" style="display:none" 
-                            onchange="$('#upload-file-info').html(this.files[0].name);encodeImageFileAsURL(this);">
-                            Choose File...
-                        </label>
+                    <input id="my-file-selector" type="file" style="display:none" onchange="$('#upload-file-info').html(this.files[0].name);encodeImageFileAsURL(this);"> Choose File...
+                </label>
                 <span class='label label-info' id="upload-file-info"></span>
             </p>
 
             <p id="upload_info_block">
-                <div id="upload_info"><strong>Upload a file first</strong></div>
+                <div id="upload_info">
+                    <strong>Upload a file first</strong>
+                </div>
                 <img id="orig_image"></img>
             </p>
 
