adapted to changes

--- a/src/index_solution.html
+++ b/src/index_solution.html
@@ -183,8 +183,7 @@
                 {
                     "type": "base64",
                     "value": currentImage,
-                    "name": currentFile.name.split('.')[0],
-                    "extension": currentFile.name.split('.')[1]
+                    "name": currentFile.name
                 }
             ]
         });
