--- a/src/ocr.html
+++ b/src/ocr.html
@@ -227,8 +227,7 @@
                 {
                     "type": "url",
                     "value": element.file.url,
-                    "name": element.file.name.split(".")[0],
-                    "extension": "bin.png"
+                    "name": element.file.name
                 }
             ]
         });
@@ -252,8 +251,7 @@
                 {
                     "type": "url",
                     "value": element.file.url,
-                    "name": element.file.name.split(".")[0],
-                    "extension": "bin.png"
+                    "name": element.file.name
                 }
             ]
         });
@@ -279,8 +277,7 @@
                 {
                     "type": "base64",
                     "value": currentImage,
-                    "name": currentFile.name.split('.')[0],
-                    "extension": currentFile.name.split('.')[1]
+                    "name": currentFile.name
                 }
             ]
         });
